correct mis-alignment issues

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ table {
     overflow: hidden;
     border-bottom: 1px solid #06FFFF;
     height: 70px;
+    margin-top: -4px;
 }
 
 .navbar {
@@ -134,6 +135,7 @@ h3 {
 
 .italics {
     font-style: italic;
+    color: white;
 }
 
 .button-apply {
@@ -355,7 +357,7 @@ ul {
     text-align: center;
 }
 
-li {
+.week-li {
     font-family: 'Poppins', sans-serif;
     padding: 20px 30px;
 }
@@ -510,7 +512,7 @@ span {
     color: white;
     font-size: 20px;
     float: left;
-    margin: 45px 300px;
+    margin: 45px 250px;
 }
 
 .footer-text2 {
@@ -518,5 +520,5 @@ span {
     color: white;
     font-size: 20px;
     float: right;
-    margin: 45px 300px;
+    margin: 45px 250px;
 }
